# tauri-lab

./: .gitignore
lab1/lab1.1/: REDEME.md
lab1/lab1.1/manifest-parser/: Cargo.toml
lab1/manifest-parser/json_plugin/valid-plugin/: manifest.json
lab1/manifest-parser/src/: main.rs  plugin_json.rs
lab1/manifest-parser/tests/plugin_json_demo/: githelper.json
